<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.beatricefarias.coffii.MainActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_background"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                android:layout_weight="2.4"
                android:fontFamily="@font/header"
                android:gravity="center"
                android:text="@string/header"
                android:textColor="@color/colorHeader"
                android:textSize="@dimen/title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">

                <ImageButton
                    android:id="@+id/decrement_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/quantity_text_view"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/description_decrement_button"
                    android:scaleType="fitEnd"
                    android:src="@drawable/decrement_button" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/kayak_r"
                    android:gravity="center"
                    android:text="@string/quantity_default"
                    android:textColor="@color/colorText"
                    android:textSize="45sp" />

                <ImageButton
                    android:id="@+id/increment_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/quantity_text_view"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/description_decrement_button"
                    android:scaleType="fitStart"
                    android:src="@drawable/increment_button" />

            </RelativeLayout>

            <TextView
                android:id="@+id/toppings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/kayak_b"
                android:gravity="center"
                android:text="@string/toppings"
                android:textColor="@color/colorHeader"
                android:textSize="@dimen/sub_titles" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/whipped_cream_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/regular"
                    android:text="@string/whipped_cream"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/body_text" />

                <CheckBox
                    android:id="@+id/chocolate_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/whipped_cream_checkbox"
                    android:layout_below="@+id/whipped_cream_checkbox"
                    android:fontFamily="@font/regular"
                    android:text="@string/chocolate"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/body_text" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/kayak_b"
                android:gravity="center"
                android:text="@string/order_summary"
                android:textColor="@color/colorHeader"
                android:textSize="@dimen/sub_titles" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/summary_text_view"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/regular"
                    android:gravity="start"
                    android:text="@string/default_summary"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/body_text" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/kayak_b"
                android:gravity="center"
                android:text="@string/total_price"
                android:textColor="@color/colorHeader"
                android:textSize="@dimen/sub_titles" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                android:fontFamily="@font/regular"
                android:gravity="center|top"
                android:text="@string/price_field"
                android:textColor="@color/colorText"
                android:textSize="@dimen/body_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">

                <Button
                    android:id="@+id/submit_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="25dp"
                    android:layout_marginEnd="16dp"
                    android:alpha="0.8"
                    android:background="@drawable/order_button"
                    android:fontFamily="@font/kayak_r"
                    android:text="@string/order_button"
                    android:textColor="@color/buttonColor"
                    android:textSize="@dimen/sub_titles" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>